# landing_point_detection

./: CMakeLists.txt  package.xml
conf/: params.yaml
launch/: d400_pipe.launch  pipe_detection.launch  pipe_detection_cameras.launch  pipe_inspection.launch  record.launch
param/: landing_point_detection_params.yaml
scripts/: tracking_record.sh
src/: landing_point_detection.cpp  utils.h
